# backend

./: Dockerfile
app/: .gitignore  prestart.sh  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 146ab8f873c5_update_user_model.py  15956e35ee96_adding_event_type_table.py  3927af90f38c_renaming_yardsales_table_to_events.py  56ebb04653fa_add_user_model.py  721a39b767da_adding_feedback_model.py  8b0d0b3e24b3_updated_user_model.py  ab711e95da32_ys_datetime_to_date.py  d08ca19fa699_changing_yardsale_dates_to_timestamps.py  e2c3937c6879_add_created_on_to_user_and_yardsale.py  e31966cb2214_yard_sale_coordinates_from_int_to_float.py  eea67a49af67_add_yardsale_table.py  f25318d9aab5_init.py
app/app/: backend_pre_start.py  initial_data.py  main.py  models.py  utils.py
app/app/api/: deps.py
app/app/api/v1/: api.py
app/app/api/v1/endpoints/: event_types.py  events.py  feedback.py  login.py  users.py  yardsales.py
app/app/core/: config.py  log_config.py
app/app/crud/: __init__.py  base.py  crud_event.py  crud_event_type.py  crud_feedback.py  crud_user.py  crud_yardsale.py
app/app/custom_types/: __init__.py  email_str.py
app/app/db/: init_db.py  session.py
app/app/email-templates/: README.md
app/app/email-templates/src/: new_feedback.mjml
app/app/models/: __init__.py  event.py  event_type.py  feedback.py  location.py  user.py  yard_sale.py
app/app/schemas/: __init__.py
app/app/tests/: conftest.py
app/app/tests/crud/: test_user.py
app/app/tests/utils/: user.py
